--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
-.box {
-    height: 100px;
-    width: 100px;
-    position: absolute;
-}
-
-#blue {
-    background-color: rgba(0, 0, 255, 0.7);
-    z-index: 1;
-}
-
-#red {
-    background-color: red;
-    left: 50%;
-    margin-left: -50px;
-}
+#pic 
+    { 
+        position: absolute;
+        width: 50px;
+        width: 60px;
+        left: 50%;
+        top: 5%;
+    }
+    
+    #ground 
+    { 
+        position: absolute;
+        background-color: black;
+        width: 100%;
+        height: 20px;
+        top: 95%;
+    }    
